// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`StackCard a recently opened vscode notebook that should NOT have a RECENTLY OPENED warning 1`] = `
<div>
  <div>
    <div
      class="StackCard-cardDiv-78"
    >
      <div
        class="StackCard-imageDiv-79"
      >
        <img
          alt="vscode logo"
          class="StackCard-cardImage-85"
          src="vscode-logo.svg"
        />
      </div>
      <div
        class="StackCard-textDiv-80"
      >
        <div
          class="StackCard-displayNameContainer-82"
        >
          <h5
            class="MuiTypography-root MuiTypography-h5 MuiTypography-noWrap StackCard-displayName-81 css-ltmxt9-MuiTypography-root"
          >
            name1
          </h5>
        </div>
        <p
          aria-label="Visual Studio Code is a streamlined code editor with support for development operations like debugging, task running, and version control."
          class="MuiTypography-root MuiTypography-body1 MuiTypography-noWrap css-yth3u7-MuiTypography-root"
          data-mui-internal-clone-element="true"
        >
          Visual Studio Code is a streamlined code editor with support for development operations like debugging, task running, and version control.
        </p>
      </div>
      <div
        class="StackCard-actionsDiv-83"
      >
        <div
          class="StackCard-statusDiv-84"
        >
          <div>
            StackStatus mock 
            {"status":"ready"}
          </div>
        </div>
        <div>
          StackCardActions mock 
          {"stack":{"id":"100","displayName":"name1","type":"vscode","status":"ready","shared":"private","accessTime":1556863200000},"copySnippets":{},"userPermissions":["open","delete","edit"],"openPermission":"open","deletePermission":"delete","editPermission":"edit"}
           
        </div>
      </div>
    </div>
    
  </div>
</div>
`;

exports[`StackCard an rstudio notebook in "requested" state should NOT  have a RECENTLY OPENED warning 1`] = `
<div>
  <div>
    <div
      class="StackCard-cardDiv-89"
    >
      <div
        class="StackCard-imageDiv-90"
      >
        <img
          alt="rstudio logo"
          class="StackCard-cardImage-96"
          src="rstudio-logo.png"
        />
      </div>
      <div
        class="StackCard-textDiv-91"
      >
        <div
          class="StackCard-displayNameContainer-93"
        >
          <h5
            class="MuiTypography-root MuiTypography-h5 MuiTypography-noWrap StackCard-displayName-92 css-ltmxt9-MuiTypography-root"
          >
            name1
          </h5>
        </div>
        <p
          aria-label="RStudio is an integrated development environment (IDE) for R. It includes a console, syntax-highlighting editor that supports direct code execution, as well as tools for plotting, history, debugging and workspace management."
          class="MuiTypography-root MuiTypography-body1 MuiTypography-noWrap css-yth3u7-MuiTypography-root"
          data-mui-internal-clone-element="true"
        >
          RStudio is an integrated development environment (IDE) for R. It includes a console, syntax-highlighting editor that supports direct code execution, as well as tools for plotting, history, debugging and workspace management.
        </p>
      </div>
      <div
        class="StackCard-actionsDiv-94"
      >
        <div
          class="StackCard-statusDiv-95"
        >
          <div>
            StackStatus mock 
            {"status":"requested"}
          </div>
        </div>
        <div>
          StackCardActions mock 
          {"stack":{"id":"100","displayName":"name1","type":"rstudio","status":"requested","shared":"private","accessTime":1556863200000},"copySnippets":{},"userPermissions":["open","delete","edit"],"openPermission":"open","deletePermission":"delete","editPermission":"edit"}
           
        </div>
      </div>
    </div>
    
  </div>
</div>
`;

exports[`StackCard an rstudio notebook that should only have a NOT ACCESSED warning 1`] = `
<div>
  <div>
    <div
      class="StackCard-cardDiv-62"
    >
      <div
        class="StackCard-imageDiv-63"
      >
        <img
          alt="rstudio logo"
          class="StackCard-cardImage-69"
          src="rstudio-logo.png"
        />
      </div>
      <div
        class="StackCard-textDiv-64"
      >
        <div
          class="StackCard-displayNameContainer-66"
        >
          <h5
            class="MuiTypography-root MuiTypography-h5 MuiTypography-noWrap StackCard-displayName-65 css-ltmxt9-MuiTypography-root"
          >
            name1
          </h5>
        </div>
        <p
          aria-label="RStudio is an integrated development environment (IDE) for R. It includes a console, syntax-highlighting editor that supports direct code execution, as well as tools for plotting, history, debugging and workspace management."
          class="MuiTypography-root MuiTypography-body1 MuiTypography-noWrap css-yth3u7-MuiTypography-root"
          data-mui-internal-clone-element="true"
        >
          RStudio is an integrated development environment (IDE) for R. It includes a console, syntax-highlighting editor that supports direct code execution, as well as tools for plotting, history, debugging and workspace management.
        </p>
      </div>
      <div
        class="StackCard-actionsDiv-67"
      >
        <div
          class="StackCard-statusDiv-68"
        >
          <div>
            StackStatus mock 
            {"status":"ready"}
          </div>
        </div>
        <div>
          StackCardActions mock 
          {"stack":{"id":"100","displayName":"name1","type":"rstudio","status":"ready","shared":"private","accessTime":1555142400000},"copySnippets":{},"userPermissions":["open","delete","edit"],"openPermission":"open","deletePermission":"delete","editPermission":"edit"}
           
        </div>
      </div>
    </div>
    <div>
      <div
        class="SuspendWarning-message-73"
      >
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium SuspendWarning-icon-75 css-i4bv87-MuiSvgIcon-root"
          data-testid="ErrorOutlinedIcon"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm1 15h-2v-2h2v2zm0-4h-2V7h2v6z"
          />
        </svg>
        <div
          class="SuspendWarning-text-74"
        >
          <p>
            This notebook has not been accessed for some time (20 days), please consider suspending
if not required. This warning will be dismissed if the notebook is opened.
          </p>
        </div>
        <div
          class="SuspendWarning-info-76"
        >
          <button
            class="MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-textInherit MuiButton-sizeMedium MuiButton-textSizeMedium MuiButton-colorInherit MuiButton-root MuiButton-text MuiButton-textInherit MuiButton-sizeMedium MuiButton-textSizeMedium MuiButton-colorInherit css-1lwtx1x-MuiButtonBase-root-MuiButton-root"
            tabindex="0"
            type="button"
          >
            <a
              class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways css-xdxgn1-MuiTypography-root-MuiLink-root"
              href="http://localhost:undefined/howto/suspend-and-restart-resources"
              style="text-decoration: none;"
              target="_blank"
            >
              MORE
            </a>
            <span
              class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
            />
          </button>
        </div>
        <div
          class="SuspendWarning-info-76"
        >
          <button
            class="MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-textInherit MuiButton-sizeMedium MuiButton-textSizeMedium MuiButton-colorInherit MuiButton-root MuiButton-text MuiButton-textInherit MuiButton-sizeMedium MuiButton-textSizeMedium MuiButton-colorInherit css-1lwtx1x-MuiButtonBase-root-MuiButton-root"
            tabindex="0"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium SuspendWarning-hide-77 css-i4bv87-MuiSvgIcon-root"
              data-testid="CloseOutlinedIcon"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M19 6.41 17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12 19 6.41z"
              />
            </svg>
            <span
              class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
            />
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`StackCard an rstudio notebook that should only have a RECENTLY OPENED warning 1`] = `
<div>
  <div>
    <div
      class="StackCard-cardDiv-46"
    >
      <div
        class="StackCard-imageDiv-47"
      >
        <img
          alt="rstudio logo"
          class="StackCard-cardImage-53"
          src="rstudio-logo.png"
        />
      </div>
      <div
        class="StackCard-textDiv-48"
      >
        <div
          class="StackCard-displayNameContainer-50"
        >
          <h5
            class="MuiTypography-root MuiTypography-h5 MuiTypography-noWrap StackCard-displayName-49 css-ltmxt9-MuiTypography-root"
          >
            name1
          </h5>
        </div>
        <p
          aria-label="RStudio is an integrated development environment (IDE) for R. It includes a console, syntax-highlighting editor that supports direct code execution, as well as tools for plotting, history, debugging and workspace management."
          class="MuiTypography-root MuiTypography-body1 MuiTypography-noWrap css-yth3u7-MuiTypography-root"
          data-mui-internal-clone-element="true"
        >
          RStudio is an integrated development environment (IDE) for R. It includes a console, syntax-highlighting editor that supports direct code execution, as well as tools for plotting, history, debugging and workspace management.
        </p>
      </div>
      <div
        class="StackCard-actionsDiv-51"
      >
        <div
          class="StackCard-statusDiv-52"
        >
          <div>
            StackStatus mock 
            {"status":"ready"}
          </div>
        </div>
        <div>
          StackCardActions mock 
          {"stack":{"id":"100","displayName":"name1","type":"rstudio","status":"ready","shared":"private","accessTime":1556863200000},"copySnippets":{},"userPermissions":["open","delete","edit"],"openPermission":"open","deletePermission":"delete","editPermission":"edit"}
           
        </div>
      </div>
    </div>
    <div>
      <div
        class="SuspendWarning-message-57"
      >
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium SuspendWarning-icon-59 css-i4bv87-MuiSvgIcon-root"
          data-testid="ErrorOutlinedIcon"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm1 15h-2v-2h2v2zm0-4h-2V7h2v6z"
          />
        </svg>
        <div
          class="SuspendWarning-text-58"
        >
          <p>
            This notebook was opened 2 hours ago and may still be in use.  Please be aware that opening
it will close it for the other user.
          </p>
        </div>
        <div
          class="SuspendWarning-info-60"
        >
          <button
            class="MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-textInherit MuiButton-sizeMedium MuiButton-textSizeMedium MuiButton-colorInherit MuiButton-root MuiButton-text MuiButton-textInherit MuiButton-sizeMedium MuiButton-textSizeMedium MuiButton-colorInherit css-1lwtx1x-MuiButtonBase-root-MuiButton-root"
            tabindex="0"
            type="button"
          >
            <a
              class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways css-xdxgn1-MuiTypography-root-MuiLink-root"
              href="http://localhost:undefined/howto/rstudio-single-user-explanation"
              style="text-decoration: none;"
              target="_blank"
            >
              MORE
            </a>
            <span
              class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
            />
          </button>
        </div>
        <div
          class="SuspendWarning-info-60"
        >
          <button
            class="MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-textInherit MuiButton-sizeMedium MuiButton-textSizeMedium MuiButton-colorInherit MuiButton-root MuiButton-text MuiButton-textInherit MuiButton-sizeMedium MuiButton-textSizeMedium MuiButton-colorInherit css-1lwtx1x-MuiButtonBase-root-MuiButton-root"
            tabindex="0"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium SuspendWarning-hide-61 css-i4bv87-MuiSvgIcon-root"
              data-testid="CloseOutlinedIcon"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M19 6.41 17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12 19 6.41z"
              />
            </svg>
            <span
              class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
            />
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`StackCard creates correct snapshot for Jupyter stack type 1`] = `
<div>
  <div>
    <div
      class="StackCard-cardDiv-1"
    >
      <div
        class="StackCard-imageDiv-2"
      >
        <img
          alt="jupyter logo"
          class="StackCard-cardImage-8"
          src="jupyter-logo.svg"
        />
      </div>
      <div
        class="StackCard-textDiv-3"
      >
        <div
          class="StackCard-displayNameContainer-5"
        >
          <h5
            class="MuiTypography-root MuiTypography-h5 MuiTypography-noWrap StackCard-displayName-4 css-ltmxt9-MuiTypography-root"
          >
            name1
          </h5>
        </div>
        <p
          aria-label="Web application that allows you to create and share documents that contain live code, equations, visualizations and explanatory text."
          class="MuiTypography-root MuiTypography-body1 MuiTypography-noWrap css-yth3u7-MuiTypography-root"
          data-mui-internal-clone-element="true"
        >
          Web application that allows you to create and share documents that contain live code, equations, visualizations and explanatory text.
        </p>
      </div>
      <div
        class="StackCard-actionsDiv-6"
      >
        <div>
          StackCardActions mock 
          {"stack":{"id":"100","displayName":"name1","type":"jupyter","shared":"private"},"copySnippets":{},"userPermissions":["open","delete","edit"],"openPermission":"open","deletePermission":"delete","editPermission":"edit"}
           
        </div>
      </div>
    </div>
    
  </div>
</div>
`;

exports[`StackCard creates correct snapshot for Zeppelin stack type 1`] = `
<div>
  <div>
    <div
      class="StackCard-cardDiv-12"
    >
      <div
        class="StackCard-imageDiv-13"
      >
        <img
          alt="zeppelin logo"
          class="StackCard-cardImage-19"
          src="zeppelin-logo.svg"
        />
      </div>
      <div
        class="StackCard-textDiv-14"
      >
        <div
          class="StackCard-displayNameContainer-16"
        >
          <h5
            class="MuiTypography-root MuiTypography-h5 MuiTypography-noWrap StackCard-displayName-15 css-ltmxt9-MuiTypography-root"
          >
            name1
          </h5>
        </div>
        <p
          aria-label="Web-based notebook that enables data-driven, interactive data analytics and collaborative documents with SQL, Scala and more."
          class="MuiTypography-root MuiTypography-body1 MuiTypography-noWrap css-yth3u7-MuiTypography-root"
          data-mui-internal-clone-element="true"
        >
          Web-based notebook that enables data-driven, interactive data analytics and collaborative documents with SQL, Scala and more.
        </p>
      </div>
      <div
        class="StackCard-actionsDiv-17"
      >
        <div>
          StackCardActions mock 
          {"stack":{"id":"100","displayName":"name1","type":"zeppelin","shared":"private"},"copySnippets":{},"userPermissions":["open","delete","edit"],"openPermission":"open","deletePermission":"delete","editPermission":"edit"}
           
        </div>
      </div>
    </div>
    
  </div>
</div>
`;

exports[`StackCard creates correct snapshot for glusterfs stack type 1`] = `
<div>
  <div>
    <div
      class="StackCard-cardDiv-23"
    >
      <div
        class="StackCard-imageDiv-24"
      >
        <span
          aria-hidden="true"
          class="material-icons notranslate MuiIcon-root MuiIcon-fontSizeMedium StackCard-cardIcon-31 css-kp9ftd-MuiIcon-root"
        >
          save
        </span>
      </div>
      <div
        class="StackCard-textDiv-25"
      >
        <div
          class="StackCard-displayNameContainer-27"
        >
          <h5
            class="MuiTypography-root MuiTypography-h5 MuiTypography-noWrap StackCard-displayName-26 css-ltmxt9-MuiTypography-root"
          >
            name1
          </h5>
          <span
            class=" makeStyles-root-34"
          >
            (
            NFS
            )
          </span>
        </div>
        <p
          aria-label="Network File System (NFS) volume to store data for Notebooks and Sites."
          class="MuiTypography-root MuiTypography-body1 MuiTypography-noWrap css-yth3u7-MuiTypography-root"
          data-mui-internal-clone-element="true"
        >
          Network File System (NFS) volume to store data for Notebooks and Sites.
        </p>
      </div>
      <div
        class="StackCard-actionsDiv-28"
      >
        <div>
          StackCardActions mock 
          {"stack":{"id":"100","displayName":"name1","type":"GLUSTERFS","shared":"private"},"copySnippets":{},"userPermissions":["open","delete","edit"],"openPermission":"open","deletePermission":"delete","editPermission":"edit"}
           
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`StackCard should show status ad buttons when status is ready 1`] = `
<div>
  <div>
    <div
      class="StackCard-cardDiv-35"
    >
      <div
        class="StackCard-imageDiv-36"
      >
        <img
          alt="jupyter logo"
          class="StackCard-cardImage-42"
          src="jupyter-logo.svg"
        />
      </div>
      <div
        class="StackCard-textDiv-37"
      >
        <div
          class="StackCard-displayNameContainer-39"
        >
          <h5
            class="MuiTypography-root MuiTypography-h5 MuiTypography-noWrap StackCard-displayName-38 css-ltmxt9-MuiTypography-root"
          >
            name1
          </h5>
        </div>
        <p
          aria-label="Web application that allows you to create and share documents that contain live code, equations, visualizations and explanatory text."
          class="MuiTypography-root MuiTypography-body1 MuiTypography-noWrap css-yth3u7-MuiTypography-root"
          data-mui-internal-clone-element="true"
        >
          Web application that allows you to create and share documents that contain live code, equations, visualizations and explanatory text.
        </p>
      </div>
      <div
        class="StackCard-actionsDiv-40"
      >
        <div
          class="StackCard-statusDiv-41"
        >
          <div>
            StackStatus mock 
            {"status":"ready"}
          </div>
        </div>
        <div>
          StackCardActions mock 
          {"stack":{"id":"100","displayName":"name1","type":"jupyter","status":"ready","shared":"private"},"copySnippets":{},"userPermissions":["open","delete","edit"],"openPermission":"open","deletePermission":"delete","editPermission":"edit"}
           
        </div>
      </div>
    </div>
    
  </div>
</div>
`;
